@@ -27,7 +27,7 @@ def read(*rnames):
 
 setup(name='zope.app.applicationcontrol',
     version = version,
-    author='Zope Corporation and Contributors',
+    author='Zope Foundation and Contributors',
     author_email='zope3-dev@zope.org',
     description='Zope applicationcontrol',
     long_description=(
@@ -51,7 +51,8 @@ setup(name='zope.app.applicationcontrol',
         'Framework :: Zope3'],
     url='http://cheeseshop.python.org/pypi/zope.app.applicationcontrol',
     extras_require=dict(
-        test=['zope.app.authentication',
+        test=['zope.app.appsetup',
+              'zope.app.authentication',
               'zope.app.component',
               'zope.app.securitypolicy',
               'zope.app.testing',
@@ -64,10 +65,11 @@ setup(name='zope.app.applicationcontrol',
     namespace_packages=['zope', 'zope.app'],
     install_requires=[
           'setuptools',
-          'zope.app.appsetup',
-          'zope.error',
-          'zope.i18n',
+          'zope.component',
+          'zope.i18nmessageid',
           'zope.interface',
+          'zope.location',
+          'zope.security',
           'zope.size',
           'zope.traversing>=3.7.0',
         ],
