@@ -24,4 +24,3 @@ from zope.app.testing.functional import ZCMLLayer
 ApplicationControlLayer = ZCMLLayer(
     os.path.join(os.path.split(__file__)[0], 'ftesting.zcml'),
     __name__, 'ApplicationControlLayer', allow_teardown=True)
-
